--- a/index.html
+++ b/index.html
@@ -4,143 +4,106 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Web Studio</title>
+    <title>goit-markup-hw-01</title>
   </head>
-
   <body>
-    <div class="wrapper">
-      <header class="header">
-        <a href="/"><span>Web</span>Studio</a>
-
-        <nav class="navigaton">
+    <header class="header">
+      <a href="./index.html"><span>Web</span>Studio</a>
+      <nav class="navigaton">
+        <ul>
+          <li><a href="./">Студия</a></li>
+          <li><a href="./">Портфолио</a></li>
+          <li><a href="./">контакты</a></li>
+        </ul>
+      </nav>
+      <ul class="contacs">
+        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <a href="tel:+380961111111">+380961111111</a>
+      </ul>
+    </header>
+    <main>
+      <section class="order_section">
+        <h1>Эфективные решения для вашего бизнеса</h1>
+        <button type="button">Заказать услугу</button>
+      </section>
+      <section class="section_work">
+        <h2>Особенности</h2>
+        <ul>
+          <li>
+            <h3 class="work_title">внимание к деталям</h3>
+            <p class="work_description">
+              Идейные соображения, а также начало повседневной работы по
+              формированию позиции.
+            </p>
+          </li>
+          <li>
+            <h3 class="work_title">Пунктуальность</h3>
+            <p class="work_description">
+              Задача организации, в особенности же рамки и место обучения кадров
+              влечет за собой.
+            </p>
+          </li>
+          <li>
+            <h3 class="work_title">Планирование</h3>
+            <p class="work_description">
+              Равным образом консультация с широким активом в значительной
+              степени обуславливает.
+            </p>
+          </li>
+          <li>
+            <h3 class="work_title">Современные технологии</h3>
+            <p class="work_description">
+              Значимость этих проблем настолько очевидна, что реализация
+              плановых заданий.
+            </p>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2 class="section_tittle">Чем мы заняты</h2>
+        <div>
           <ul>
-            <li><a href="/studio">Студия</a></li>
-            <li><a href="/portfolio">Портфолио</a></li>
-            <li><a href="/contacts">контакты</a></li>
-          </ul>
-        </nav>
-        <div class="contacs">
-          <ul>
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111">+380961111111</a></li>
+            <li><img src="./img/box1.jpg" width="370" alt="box1" /></li>
+            <li><img src="./img/box2.jpg" width="370" alt="box2" /></li>
+            <li><img src="./img/box3.jpg" width="370" alt="box3" /></li>
           </ul>
         </div>
-      </header>
-      <main>
-        <section class="order_section">
-          <h1>Эфективные решения <br />для вашего бизнеса</h1>
-          <button class="order_section_button">Заказать услугу</button>
-        </section>
-        <section class="section_work">
-          <ul>
-            <li>
-              <h3 class="work_title">внимание к деталям</h3>
-              <span class="work_description"
-                >Идейные соображения, а также начало повседневной работы по
-                формированию позиции.
-              </span>
-            </li>
-            <li>
-              <h3 class="work_title">Пунктуальность</h3>
-              <span class="work_description"
-                >Задача организации, в особенности же рамки и место обучения
-                кадров влечет за собой.
-              </span>
-            </li>
-            <li>
-              <h3 class="work_title">Планирование</h3>
-              <span class="work_description"
-                >Равным образом консультация с широким активом в значительной
-                степени обуславливает.
-              </span>
-            </li>
-            <li>
-              <h3 class="work_title">Современные технологии</h3>
-              <span class="work_description"
-                >Значимость этих проблем настолько очевидна, что реализация
-                плановых заданий.
-              </span>
-            </li>
-          </ul>
-          <h2 class="section_tittle">Чем мы заняты</h2>
-          <div>
-            <ul>
-              <li><img src="./img/box1.jpg" width="370" alt="box1" /></li>
-              <li><img src="./img/box2.jpg" width="370" alt="box2" /></li>
-              <li><img src="./img/box3.jpg" width="370" alt="box3" /></li>
-            </ul>
-          </div>
-        </section>
-        <section>
-          <h2 class="section_tittle">Наша команда</h2>
-          <ul>
-            <li>
-              <figure>
-                <img
-                  class="teammember_photo"
-                  src="./img/photo1.jpg"
-                  width="260"
-                  alt="photo 1"
-                />
-                <figcaption>
-                  <h3 class="teammember_name">Ольга Репина</h3>
-                  <div class="teammember_position">Frontend Developer</div>
-                </figcaption>
-              </figure>
-            </li>
-            <li>
-              <figure>
-                <img
-                  class="teammember_photo"
-                  src="./img/photo2.jpg"
-                  width="260"
-                  alt="photo 2"
-                />
-                <figcaption>
-                  <h3 class="teammember_name">Игорь Демьяненко</h3>
-                  <div class="teammember_position">Product Designer</div>
-                </figcaption>
-              </figure>
-            </li>
-            <li>
-              <figure>
-                <img
-                  class="teammember_photo"
-                  src="./img/photo3.jpg"
-                  width="260"
-                  alt="photo 3"
-                />
-                <figcaption>
-                  <h3 class="teammember_name">Николай Тарасов</h3>
-                  <div class="teammember_position">Marketing</div>
-                </figcaption>
-              </figure>
-            </li>
-            <li>
-              <figure>
-                <img
-                  class="teammember_photo"
-                  src="./img/photo4.jpg"
-                  width="260"
-                  alt="photo 4"
-                />
-                <figcaption>
-                  <h3 class="teammember_name">Михаил Ермаков</h3>
-                  <div class="teammember_position">UI Designer</div>
-                </figcaption>
-              </figure>
-            </li>
-          </ul>
-        </section>
-      </main>
-      <footer>
-        <a href="/"><span>Web</span>Studio</a>
+      </section>
+      <section>
+        <h2>Наша команда</h2>
         <ul>
-          <li><address>г. Киев, пр-т Леси Украинки, 26</address></li>
+          <li>
+            <img src="./img/photo2.jpg" width="260" alt="Игорь Демьяненко" />
+            <h3>Игорь Демьяненко</h3>
+            <p>Product Designer</p>
+          </li>
+          <li>
+            <img src="./img/photo1.jpg" width="260" alt="Ольга Репина" />
+            <h3>Ольга Репина</h3>
+            <p>Frontend Developer</p>
+          </li>
+          <li>
+            <img src="./img/photo3.jpg" width="260" alt="Николай Тарасов" />
+            <h3>Николай Тарасов</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img src="./img/photo4.jpg" width="260" alt="Михаил Ермаков" />
+            <h3>Михаил Ермаков</h3>
+            <p>UI Designer</p>
+          </li>
+        </ul>
+      </section>
+    </main>
+    <footer>
+      <a href="./index.html"><span>Web</span>Studio</a>
+      <address>
+        <ul>
+          <li>г. Киев, пр-т Леси Украинки, 26</li>
           <li><a href="mailto:info@example.com">info@example.com</a></li>
           <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
         </ul>
-      </footer>
-    </div>
+      </address>
+    </footer>
   </body>
 </html>
